[project]
name = "RLJobScheduler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gymnasium>=1.2.3",
    "matplotlib>=3.10.8",
    "numba>=0.60.0",
    "openai>=2.15.0",
    "pandas>=3.0.0",
    "scipy>=1.17.0",
    "tensorboard>=2.20.0",
    "torch>=2.9.1",
    "wandb>=0.24.0",
]
